@@ -1,3 +1,3 @@
 prog: badjump
-cleanup: rm -f vgcore.pid*
+cleanup: rm -f vgcore.*
 stderr_filter: filter_allocs
